syntax = "proto2";
package proto.login;

message Login
{
	optional int32 uid = 1;           //uid
	optional int32 roomid = 2;        //房间号
	optional string skey = 3;
	optional int32 gameid = 4;        //游戏类型，根据此类型创建桌子类型
	optional bool voice = 5;          //语音
	optional bool reconnect = 6;      //断线重连需要赋值true
}

message LoginAck
{
	optional int32 code = 1;
}

message Logout
{
	optional int32 seatid = 1;
}


message Emoji
{
	optional int32 seatid = 1;
	optional int32 id = 2;
}

message Heart
{
	optional int64 time = 1;
}


//玩家信息
message Player
{
	optional int32 uid = 1;
	optional int32 sex = 2;
	optional string avatar = 3;
	optional string name = 4;
	optional int32 voice = 5;    //语音状态
	optional int32 seatid = 6;   //玩家位置
	optional int32 robot = 7;    //true：机器人
	optional int32 score = 8;    //分数
	optional int32 ready = 9;    //0:未准备   1:已准备
	optional int32 disband = 10; //1:同意   2:不同意
}

message UpTable
{
	optional int32 seatid = 1;    //玩家位置
	optional Player player = 2;        //玩家基础信息
}

message DownTable
{
	optional int32 seatid = 1;    //玩家位置
}

message Voice
{
	optional int32 charid = 1;
	optional int32 status = 2;    //1:开启
}

//准备,取消准备
message Ready
{
	optional int32 seatid = 1;
	optional bool isReady = 2;  //准备:true   取消准备:false
}

